2003-07-22  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h (XCALLOC, XREALLOC, CCLONE): Fix under- and
	over-parenthesization in macros.

	Sync with coreutils.

	* xalloc.h (XMALLOC, XCALLOC, XREALLOC): Remove casts not
	required by C99.

	Use `exit_failure' for xalloc and xmemcoll instead of their own
	private exit-failure variables.
	* xalloc.h (xalloc_exit_failure): Remove.
	* xmalloc.c: Likewise.  Include exitfail.h.
	(xalloc_die): Use exit_failure instead of xalloc_exit_failure.
	* xmemcoll.h (xmemcoll_exit_failure): Remove.
	* xmemcoll.c: Likewise.  Include exitfail.h.
	(xmemcoll): Use exit_failure instead of xalloc_exit_failure.

2003-07-18  Paul Eggert  <eggert@twinsun.com>

	* closeout.h (close_stdout_set_status, close_stdout_status): Remove.
	* closeout.c: Likewise.  Include "closeout.h" right after config.h,
	to test that it can stand by itself.  Include "exitfail.h".
	Clients should set exit_failure instead.
	(EXIT_FAILURE): Remove; no longer needed.  Do not include <stdlib.h>.

2003-07-18  Andreas Schwab  <schwab@suse.de>

	* memcoll.c (memcoll) [!HAVE_STRCOLL]: Clear errno.

2003-07-18  Bruno Haible  <bruno@clisp.org>

	* getndelim2.h: New file.
	* getndelim2.c: Make into a module of its own. Include config.h,
	getndelim2.h.
	(getndelim2): Make non-static. Change return type to ssize_t.
	* getline.h: Change argument names.
	* getline.c: Include getndelim2.h instead of getndelim2.c.
	* getnline.c: Include getndelim2.h.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Remove file.
	* Makefile.in: Remove file.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* getnline.h: New file.
	* getnline.c: New file.
	* getndelim2.c: New file, extracted from getline.c.
	(getndelim2): Renamed from getdelim2, with added nmax argument.
	* getline.c: Include getndelim2.c.
	(getdelim2): Moved out to getndelim2.c.
	(getline, getdelim): Update.

2003-07-15    <karl@gnu.org>

	* vasnprintf.c: update from gettext.

2003-07-15  Jim Meyering  <jim@meyering.net>
